--- a/main/posts/css/post.css
+++ b/main/posts/css/post.css
@@ -1,6 +1,6 @@
-@import url("../blog/menu.css");
-@import url("../posts/author.css");
-@import url('../posts/share.css');
+@import url("../../css/menu.css");
+@import url("author.css");
+@import url('share.css');
 
 body{
     font-family: "Roboto", sans-serif;
@@ -57,8 +57,7 @@ body{
 .bg-content-header-2{
     size: 1rem;
     font-style: italic;
-    border-left: 6px solid #900087;
-    padding-left: 15px; 
+    border-left: 6px solid #900087; 
 }
 
 .bg-content{
