--- a/main/css/blog-posts.css
+++ b/main/css/blog-posts.css
@@ -13,7 +13,7 @@
 
 
 .bg-custom-posts-thumb-x1{
-    width: 200px;
+    width: 100%;
     height: auto;
     padding: 0;
     margin: 0;
@@ -28,7 +28,7 @@
 }
 
 .bg-custom-posts-x1-image{
-    width: 350px;
+    width: 100%;
 }
 
 .bg-custom-posts-x2-image{
