--- a/main/css/title.css
+++ b/main/css/title.css
@@ -5,17 +5,16 @@
     color: #444444;
     text-decoration: none;
     font-family: "Tinos", serif;
-    width: 450px;
+    width: 50%;
     text-align: center;
     margin: auto;
     margin-top: 150px;
 }
 
-.title{
-    
+.title{   
     font-size: 4rem;
 }
 
 .title-description{
-    font-size: 2.5rem;   
+    font-size: 1.5rem;   
 }
